<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="min_price">Цена покупки</string>
    <string name="max_price">Цена продажи</string>
    <string name="app_name">Республика</string>
    <string name="menu_settings">Настройки</string>
    <string name="title_activity_hello">HelloActivity</string>
    <string name="one">Поиск полезных ископаемых</string>
    <string name="two">Строительство</string>
    <string name="three">Биржа</string>
    <string name="four">Paragraph Four</string>
    <string name="one_bourse">Котировки</string>
    <string name="two_bourse">Графики</string>
    <string name="three_bourse">Торговля</string>
    <string name="four_bourse">Финансы</string>
    <string name="Main_View">Главное</string>
    <string name="Search_minerals">Поиск полезных ископаемых</string>
    <string name="Length">Длина</string>
    <string name="Width">Ширина</string>
    <string name="Scan_results">Результаты сканирования</string>
    <string name="Scan">Сканировать</string>
    <string name="Result">Результат</string>
    <string name="Search_results_table">Таблица результатов поиска</string>
    <string name="Inventory_valuation">Оценка залежей</string>
    <string name="Build">Время строительства</string>
    <string name="mining">Добыча</string>
    <string name="giant">Гигантские</string>
    <string name="big">Большие</string>
    <string name="average">Средние</string>
    <string name="small">Малые</string>
    <string name="titan">Титан</string>
    <string name="Rhodium">Родий</string>
    <string name="platinum">Платина</string>
    <string name="gold">Золото</string>
    <string name="iridium">Иридий</string>
    <string name="diamond">Алмаз</string>
    <string name="silver">Серебро</string>
    <string name="iron">Железо</string>
    <string name="cooper">Медь</string>
    <string name="oil">Нефть</string>
    <string name="gas">Газ</string>
    <string name="nickel">Никель</string>
    <string name="aluminium">Алюминий</string>
    <string name="manganese">Марганец</string>
    <string name="Title">Название</string>
    <string name="tin">Олово</string>
    <string name="coal">Уголь</string>
    <string name="uranium">Уран</string>
    <string name="Quantity">Количество</string>
    <string name="volume">Объем</string>
    <string-array name="lorem">
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus tempor lectus, in consectetur leo suscipit vitae. Aenean blandit, dolor at congue adipiscing, libero libero vestibulum ligula, at facilisis diam arcu sit amet purus. Pellentesque tincidunt lorem eget tortor scelerisque quis dignissim sapien ullamcorper. Sed tincidunt, nisi non elementum tincidunt, nibh justo malesuada tellus, placerat venenatis eros libero id nunc. Sed lectus ligula, mollis at elementum quis, cursus sit amet ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed cursus auctor neque, eget elementum erat gravida eu. Donec at mauris in arcu vulputate condimentum vel ac sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed justo est, quis adipiscing velit. Quisque bibendum placerat feugiat. Vestibulum a lectus eu neque vestibulum congue. Ut dictum, felis ut consectetur venenatis, ligula arcu tincidunt metus, non viverra sem odio ut nulla. Maecenas eu varius nibh. Mauris a ligula odio, id dignissim augue.</item>
        <item>Suspendisse potenti. Quisque accumsan leo eget orci mattis vulputate. Donec vitae dui justo, congue consectetur sem. Nunc sit amet nulla tortor, vitae auctor lacus. Nunc at orci nulla, a sodales sapien. Integer sagittis hendrerit nisl et vehicula. Curabitur et nibh lorem.
Morbi aliquam auctor pharetra. Etiam ac mi ut ligula blandit bibendum scelerisque vitae eros. Nullam suscipit vehicula velit at pellentesque. Nunc accumsan velit id ligula ornare ornare. Cras auctor viverra commodo. Suspendisse quis elit massa. Donec sollicitudin enim quis lacus dignissim vitae dapibus neque laoreet. Donec suscipit elementum commodo. Pellentesque eget nisl tellus, at congue ipsum. Nunc lorem lorem, sagittis vel dapibus ut, dapibus eu leo.</item>
        <item>In libero mi, sodales in tristique id, faucibus non arcu. Suspendisse potenti. Duis condimentum, lectus id imperdiet pulvinar, nisi libero luctus erat, in congue nisi nisl eget leo. Nulla egestas mauris vel ligula bibendum in luctus elit sollicitudin. Curabitur tincidunt vehicula magna et lacinia. Duis a est augue. Maecenas vehicula mauris eget diam accumsan a blandit mi laoreet. Nam a congue ante. Pellentesque magna est, feugiat eu mollis ac, mollis nec arcu. Vivamus scelerisque congue eros, semper porta elit bibendum eu. Cras et turpis enim, at auctor sem.</item>
        <item>Integer lacinia, purus quis pretium faucibus, diam quam interdum est, in volutpat purus enim a turpis. Phasellus vitae turpis at elit tempus dapibus dapibus a lorem. Etiam adipiscing ante eu purus pretium in tempus velit iaculis. Phasellus libero tellus, volutpat varius bibendum at, venenatis id eros. Quisque consectetur mattis urna, ut tincidunt magna venenatis sed. In lacus ipsum, faucibus vitae volutpat ac, tempor pulvinar dolor. Sed bibendum feugiat dui in dictum. Proin quam erat, laoreet eget feugiat at, cursus ac metus. Sed dictum magna eget neque aliquam dapibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque id egestas sem.</item>
    </string-array>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_mine">MainActivity</string>
    <string name="title_activity_miner">Miner</string>
    <string name="title_activity_bourse_main">Bourse_main</string>

    <string-array name="screen_array">
        <item>Screen 1</item>
        <item>Screen 2</item>
        <item>Screen 3</item>
    </string-array>

    <string name="Buy">BUY</string>
    <string name="Sell">SELL</string>
    <string name="Install">Установить</string>
    <string name="Take_Profit">Take profit</string>
    <string name="Stop_Loss">Stop loss</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="screen_one">Цены</string>
    <string name="screen_two">Screen two</string>
    <string name="screen_three">Screen three</string>
    <string name="title_activity_bouse_main">Bouse_main</string>
    <string name="log">График</string>
    <string name="title_activity_trade_copper">Trade_copper</string>
    <string name="title_activity_transaction">Transaction</string>
    <string name="title_activity_open_order">Open_order</string>

</resources>